--- a/style.css
+++ b/style.css
@@ -4,3 +4,13 @@
   padding-bottom: 20px;
   overflow: hidden;
 }
+
+#fsguide {
+  background: #fff url(img/partsguide.png) right 0 no-repeat;
+  background-size: 500px 354px;
+}
+
+.download  .image-right p {
+  margin-left: 30px;
+  margin-right: 30px;
+}
