--- a/style.css
+++ b/style.css
@@ -10,7 +10,60 @@
   background-size: 500px 354px;
 }
 
+#nopic {
+  background: #fff url(img/partsguide.png) right 0 no-repeat;
+  background-size: 500px 354px;
+}
+
 .download  .image-right p {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.info-list .nonumber:after {
+  content: "";
+}
+
+/* Tutorials */
+
+.info-list {
+  margin-top: 90px;
+  counter-reset: tutorialstep;
+  display: none;
+}
+
+.info-list.active {
+  display: block;
+}
+
+.wrapper {
+  position:relative;
+  width: 980px;
+  margin: 0 auto;
+}
+
+.info-list > li {
+  position: relative;
+  background-color: #fff;
+  margin: 15px 0px 15px 0px;
+  padding: 40px 0 60px;
+  font-size: 18px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 1;
+
+  -webkit-transition: all 0.6s ease-in-out 0s;
+  -moz-transition: all 0.6s ease-in-out 0s;
+  -o-transition: all 0.6s ease-in-out 0s;
+  transition: all 0.6s ease-in-out 0s;
+}
+
+.info-list .image-right {
+  padding-right: 440px;
+}
+
+.info-list .image-right p {
   margin-left: 30px;
   margin-right: 30px;
 }
