--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@
   background-size: 500px 354px;
 }
 
+.tabs {
+  display: inline-block;
+  margin: 10px auto 0;
+  font-size: 0;
+}
+
 .download  .image-right p {
   margin-left: 30px;
   margin-right: 30px;
