--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
+#header {
+  padding: 10px 0 0;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  background: #222;
+  text-align: center;
+  margin: 0 0 2px 0;
+  padding: 10px 0px 10px 0;
+}
+
 p
 {
 	text-align: left;
+	margin-left: 30px;
 }
 
-#download {
+h1 {
+	margin: 30px auto;
+}
+
+#spacer {
+	margin: 20px auto;
+}
+
+#content {
   text-align: center;
   background-color: #f5f5f5;
   padding-bottom: 20px;
   overflow: hidden;
+  margin: 0px auto;
 }
 
 #fsguide {
@@ -20,10 +41,83 @@ p
   background-size: 500px 354px;
 }
 
+#header a {
+	font-size: 15px;
+	padding: 5px 10px 5px 10px;
+	background-color: #fff;
+	margin: 0 -2px 0 -2px;
+	border: 1px solid #dddddd;
+}
+
+#header a.first {
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+
+#header a.last {
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+#header a.selected {
+	color: #fff;
+	background-color: #327fc7;
+	border-color: #327fc7;
+	outline: none;
+}
+
 .tabs {
   display: inline-block;
   margin: 10px auto 0;
   font-size: 0;
+}
+
+.tabs li {
+  display: inline-block;
+  margin: 0;
+  font-size: 15px;
+}
+
+.tabs li:first-child a {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.tabs li:last-child a {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.tabs li:nth-child(even) a {
+  margin: 0 -1px;
+}
+
+.tabs a {
+  color: #323232;
+  background-color: #fff;
+  padding: 10px 20px;
+  display: inline-block;
+  border: 1px solid #dddddd;
+  position: relative;
+  line-height: 1em;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.tabs a:hover {
+  color: #327fc7;
+  border-color: #327fc7;
+  z-index: 10;
+}
+
+.tabs a.selected {
+  z-index: 20;
+  color: #fff;
+  background-color: #327fc7;
+  border-color: #327fc7;
+  outline: none;
 }
 
 .download  .image-right p {
@@ -60,7 +154,7 @@ p
   position: relative;
   background-color: #fff;
   margin: 15px 0px 15px 0px;
-  padding: 40px 0 60px;
+  padding: 40px 20px 60px;
   font-size: 18px;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -80,4 +174,20 @@ p
 .info-list .image-right p {
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.navbutton {
+  position: absolute;  
+  right: 20px;
+  background-color: #fff;
+  color: #111;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: bold;
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: color 0.2s ease-in-out 0s;
+  -moz-transition: color 0.2s ease-in-out 0s;
+  -o-transition: color 0.2s ease-in-out 0s;
+  transition: color 0.2s ease-in-out 0s;
 }
